<resources>
    <string name="app_name">Stop\nCovid19</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="vid19">VID19</string>
    <string name="st">ST</string>
    <string name="c">C</string>
    <string name="p">P</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="please_sign_in">Please sign in</string>
    <string name="new_user">New User?</string>
    <string name="sign_up">\u0020Sign Up</string>
    <string name="login">SIGN IN</string>
    <string name="forgot_password">Forget Password?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="firstname">Firstname</string>
    <string name="your_mobile_no">Phone no</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="signup">SignUp</string>
    <string name="your_email">Your Email</string>
    <string name="last_name">Lastname</string>
    <string name="forgot_password2">Forgot Password</string>
    <string name="code">Co\nde</string>
    <string name="verification">verification</string>
    <string name="description_otp">Enter one time password sent on your registered phone no</string>
    <string name="verify_code">Verify code</string>
    <string name="loading">Loading...</string>
    <string name="new_password_text">Provide your account\'s phone no for which you want to reset your password!</string>
    <string name="next">next</string>
    <string name="new_credentials">New \n Credentials</string>
    <string name="setnewpassword">Your identity has been verified! \nSet your new password</string>
    <string name="update">Update</string>
    <string name="new_password">New Password</string>
    <string name="password_nupdated">password \nupdated</string>
    <string name="your_password_has_been_updated">your password has been updated!</string>
    <string name="sign_in">sign in</string>
    <string name="title_activity_navigation_main">NavigationMain</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_country">Track My Country</string>
    <string name="menu_logout">Log Out</string>
    <string name="track_my_state">Track My State</string>
    <string name="share">Share</string>
    <string name="active">Active</string>
    <string name="deaths">Deaths</string>
    <string name="recovered">Recovered</string>
    <string name="total_cases">Total Cases</string>
    <string name="global_stats">Global Stats</string>
    <string name="affected_countries">Affected Countries</string>
    <string name="call_now">Call Now</string>
    <string name="send_sms">Whatsapp us</string>
    <string name="novel">If you feel sick with any covid19 symptoms \nCall or Whatsapp us immediately for help</string>
    <string name="_1_firebase_login_register"><![CDATA[1 - Firebase Login & Register.]]></string>
    <string name="stats_sources">*There are various sources that are tracking and aggregating coronavirus data. They update at different times and may have different ways of gathering data.</string>
    <string name="api_text">API for Covid-19 Stats in India, sourced from The Ministry of Health and Family Welfare.</string>
</resources>