<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityClasses.PasswordUpdated"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:paddingVertical="15dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_nupdated"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:fontFamily="@font/fredoka_one"
            android:includeFontPadding="false"
            android:textAlignment="center">

        </TextView>


        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_baseline_check_circle_24"
            app:tint="@color/black"
            android:scaleType="fitXY"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="20dp">

        </ImageView>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans_bold"
            android:text="@string/your_password_has_been_updated"
            android:textAlignment="center"
            android:includeFontPadding="false">

        </TextView>


        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:text="@string/sign_in"
            android:textColor="@color/whitw"
            android:paddingHorizontal="50dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:onClick="BacktoLoginscreen">

        </androidx.appcompat.widget.AppCompatButton>

    </LinearLayout>



</ScrollView>