<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword"
    android:fitsSystemWindows="true"
    >


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@drawable/login_bg"
            android:orientation="vertical"
            android:id="@+id/linear_register">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_marginTop="25dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/fredoka_one"
                        android:text="@string/st"
                        android:textColor="#FA233F"
                        android:textSize="25sp"
                        android:textStyle="normal">

                    </TextView>

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="23dp"
                        android:src="@drawable/ic_covid">
                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/fredoka_one"
                        android:text="@string/p"
                        android:textColor="#FA233F"
                        android:textSize="25sp"
                        android:textStyle="normal">

                    </TextView>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/fredoka_one"
                        android:text="@string/c"
                        android:textColor="#FA233F"
                        android:textSize="25sp"
                        android:textStyle="normal">

                    </TextView>

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="23dp"
                        android:src="@drawable/ic_virus">
                    </ImageView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/fredoka_one"
                        android:text="@string/vid19"
                        android:textColor="#FA233F"
                        android:textSize="25sp"
                        android:textStyle="normal">

                    </TextView>


                </LinearLayout>


            </LinearLayout>


            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_lock"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="15dp">

            </ImageView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/asul"
                android:paddingHorizontal="30dp"
                android:text="@string/forgot_password2"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginTop="3dp">
            </TextView>



        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingVertical="50dp"
            android:paddingHorizontal="12dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/new_password_text"
                android:textAlignment="center">

            </TextView>


            <com.hbb20.CountryCodePicker
                android:id="@+id/country_code_picker_forgotpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ccp_autoDetectCountry="true"
                app:ccp_showFlag="true"
                app:ccp_showNameCode="true"
                android:background="@drawable/countrycode_bg"
                android:layout_marginTop="20dp"
                app:ccp_showArrow="true"
                app:ccp_showFullName="true"
                app:ccp_arrowSize="30dp"
                android:padding="6dp"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:boxStrokeColor="@color/subu2"
                app:boxStrokeWidth="1sp"
                app:boxStrokeWidthFocused="1sp"
                app:startIconDrawable="@drawable/ic_phone"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:id="@+id/forgotpassword_phoneno"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/your_mobile_no"
                    android:singleLine="true"
                    android:inputType="phone"/>


            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/button_bg"
                android:text="@string/next"
                android:textColor="#FFFCFC"
                android:fontFamily="sans-serif-black"
                android:textSize="18sp"
                android:textAllCaps="true"
                android:elevation="5dp"
                android:onClick="Verifyphoneno"
                android:id="@+id/next_button">

            </androidx.appcompat.widget.AppCompatButton>


        </LinearLayout>






    </LinearLayout>


    </ScrollView>


    <include layout="@layout/progressdialog"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </include>

</RelativeLayout>