<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerifyOTP"
    android:background="#FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="30dp"
        android:paddingHorizontal="15dp"
        android:orientation="vertical">

<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/ic_close"
    app:tint="@color/black"
    android:padding="5dp"
    android:id="@+id/cancel_image">

</ImageView>


        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/code"
        android:textColor="@color/black"
        android:textSize="100sp"
        android:textAllCaps="true"
        android:layout_gravity="center"
            android:textAlignment="center"
            android:includeFontPadding="false"
            android:layout_marginTop="30dp">

    </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/verification"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textAllCaps="true"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:includeFontPadding="false">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:fontFamily="sans-serif"
            android:includeFontPadding="false"
            android:text="@string/description_otp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp">

        </TextView>


        <com.chaos.view.PinView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:itemCount="6"
            app:itemWidth="46dp"
            app:itemHeight="46dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            app:lineColor="@color/subu222"
            app:lineWidth="1dp"
            android:itemBackground="@color/subu3"
            style="@style/PinWidget.PinView"
            android:cursorVisible="true"
            android:inputType="number"
            app:cursorColor="@color/black"
            app:itemRadius="5dp"
            app:hideLineWhenFilled="true"
            android:id="@+id/pinview_otp">

        </com.chaos.view.PinView>


        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/button_bg"
            android:text="@string/verify_code"
            android:textColor="#FFFCFC"
           android:fontFamily="sans-serif-black"
            android:textAllCaps="true"
            android:textSize="18sp"
            android:elevation="5dp"
            android:layout_marginBottom="50dp"
            android:id="@+id/verifyotp_button"
            android:onClick="callNextScreenFromOTP">

        </androidx.appcompat.widget.AppCompatButton>

    </LinearLayout>


</ScrollView>